# youtube_downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/youtube_downloader/: cli.py  web.py
web/: index.html
